Better CSS style - fix some spacing, remove '' on url things

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -13,7 +13,7 @@
 // Page layout
 
 body {
-	background: #e0e4e4 url( 'images/bkgd.gif' ) repeat;
+	background: #e0e4e4 url( images/bkgd.gif ) repeat;
 	font-family: sans-serif;
 	line-height: 1.5;
 	font-size: @scale;
@@ -75,7 +75,7 @@ a#p-banner {
 	line-height: 1;
 	color: #000;
 	.header-fonts();
-	background: url( 'images/med-ltr.svg' ) no-repeat 0 100%;
+	background: url( images/med-ltr.svg ) no-repeat 0 100%;
 	min-width: 355px;
 	padding: 0 0 0 0.5em;
 	margin: 0.75em 0 0.5em 0.5em;
@@ -90,7 +90,7 @@ a#p-banner {
 	right: 1em;
 	top: 0.5em;
 	padding: 0 1em 0.25em 2em;
-	background: url( 'images/short-rtl.svg' ) no-repeat 100% 100%;
+	background: url( images/short-rtl.svg ) no-repeat 100% 100%;
 }
 
 #p-personal,
@@ -113,7 +113,7 @@ a#p-banner {
 	position: absolute;
 	right: 1em;
 	top: 3.5em;
-	background: url( 'images/med-rtl.svg' ) no-repeat 100% 92%;
+	background: url( images/med-rtl.svg ) no-repeat 100% 92%;
 	margin-right: -2em;
 	padding: 0 2.5em 0.5em 13.5em;
 
@@ -134,7 +134,7 @@ a#p-banner {
 
 #searchInput {
 	padding: 0.5em;
-	background: url( 'images/short-ltr.svg' ) no-repeat 0 100%;
+	background: url( images/short-ltr.svg ) no-repeat 0 100%;
 	width: 17em;
 }
 
@@ -160,11 +160,11 @@ a#p-banner {
 
 #mw-navigation {
 	#site-navigation {
-		background: url( 'images/med-td.svg' ) no-repeat 20px -10px;
+		background: url( images/med-td.svg ) no-repeat 20px -10px;
 	}
 
 	.mw-portlet {
-		background: url( 'images/short-td.svg' ) no-repeat 20px 0;
+		background: url( images/short-td.svg ) no-repeat 20px 0;
 	}
 
 	#p-logo {
@@ -173,8 +173,8 @@ a#p-banner {
 	}
 
 	.mw-portlet-body {
-		background: url( 'images/short-td.svg' ) no-repeat 17px 0,
-			url( 'images/short-ltr.svg' ) no-repeat 0 5px;
+		background: url( images/short-td.svg ) no-repeat 17px 0,
+			url( images/short-ltr.svg ) no-repeat 0 5px;
 		padding: 0.75em 0 0 26px;
 	}
 
@@ -203,36 +203,32 @@ a#p-banner {
 	z-index: 1;
 	margin: 0 -25px 0 0;
 	padding: 0 25px 0 0;
-	background: url( 'images/long-ltr.svg' ) no-repeat 5px 27px,
-		url( 'images/short-rtl.svg' ) no-repeat 98.5% 30px,
-		url( 'images/long-rtl.svg' ) no-repeat 100% 54px,
-		url( 'images/long-bu.svg' ) no-repeat 0 100%,
-		url( 'images/med-ltr.svg' ) no-repeat 45px 100%;
+	background: url( images/long-ltr.svg ) no-repeat 5px 27px,
+		url( images/short-rtl.svg ) no-repeat 98.5% 30px,
+		url( images/long-rtl.svg ) no-repeat 100% 54px,
+		url( images/long-bu.svg ) no-repeat 0 100%,
+		url( images/med-ltr.svg ) no-repeat 45px 100%;
 }
 
 #content-container {
 	position: relative;
 	margin: -30px 0 0 -25px;
 	padding: 30px 0 0 25px;
-	background: url( 'images/longlong-ltr.svg' ) no-repeat 5px 30px,
-		url( 'images/long-ltr.svg' ) no-repeat 13px 27px,
-		url( 'images/long-td.svg' ) no-repeat 25px 8px,
-		url( 'images/med-td.svg' ) no-repeat 27px 0,
-		url( 'images/short-td.svg' ) no-repeat 22px 45px,
-		url( 'images/long-td.svg' ) no-repeat 100% 10px,
-		url( 'images/long-ltr.svg' ) no-repeat 0 100%;
-
+	background: url( images/longlong-ltr.svg ) no-repeat 5px 30px,
+		url( images/long-ltr.svg ) no-repeat 13px 27px,
+		url( images/long-td.svg ) no-repeat 25px 8px,
+		url( images/med-td.svg ) no-repeat 27px 0,
+		url( images/short-td.svg ) no-repeat 22px 45px,
+		url( images/long-td.svg ) no-repeat 100% 10px,
+		url( images/long-ltr.svg ) no-repeat 0 100%;
 }
 
 #content-footer-container {
 	min-height: 0.75em;
 	margin: 0 -25px 0 -25px;
 	padding: 0 25px 0 25px;
-	background:
-		url( 'images/med-ltr.svg' ) no-repeat 7px 2px,
-		url( 'images/short-rtl.svg' ) no-repeat 99% 0px,
-		;
-
+	background: url( images/med-ltr.svg ) no-repeat 7px 2px,
+		url( images/short-rtl.svg ) no-repeat 99% 0px;
 }
 
 #content-footer {
@@ -241,11 +237,11 @@ a#p-banner {
 }
 
 #content {
-	background: url( 'images/med-td.svg' ) no-repeat 16px 60px,
-		url( 'images/long-td.svg' ) no-repeat 100% -20px,
-		url( 'images/long-rtl.svg' ) no-repeat 150% 23px,
-		url( 'images/med-ltr.svg' ) no-repeat 8px 23px,
-		url( 'images/med-td.svg' ) no-repeat 1px -30px;
+	background: url( images/med-td.svg ) no-repeat 16px 60px,
+		url( images/long-td.svg ) no-repeat 100% -20px,
+		url( images/long-rtl.svg ) no-repeat 150% 23px,
+		url( images/med-ltr.svg ) no-repeat 8px 23px,
+		url( images/med-td.svg ) no-repeat 1px -30px;
 	background-color: #fff;
 	padding: 0.25em 2em 1.5em;
 	border: solid #000;
@@ -258,22 +254,23 @@ a#p-banner {
 	position: absolute;
 	content: '';
 }
+
 #lright1 {
-	background: url( 'images/longlong-td.svg' ) no-repeat;
+	background: url( images/longlong-td.svg ) no-repeat;
 	height: 890px;
 	right: 2px;
 	top: -20px;
 }
 
 #lright2 {
-	background: url( 'images/long-bu.svg' ) no-repeat;
+	background: url( images/long-bu.svg ) no-repeat;
 	height: 760px;
 	right: 0;
 	bottom: -10px;
 }
 
 #lright3 {
-	background: url( 'images/med-bu.svg' ) no-repeat;
+	background: url( images/med-bu.svg ) no-repeat;
 	height: 355px;
 	right: 2px;
 	bottom: -18px;
@@ -294,16 +291,16 @@ a#p-banner {
 	}
 
 	h1 {
-		background: url( 'images/long-ltr.svg' ) no-repeat 0 100%,
-			url( 'images/med-ltr.svg' ) no-repeat 5px 95%;
+		background: url( images/long-ltr.svg ) no-repeat 0 100%,
+			url( images/med-ltr.svg ) no-repeat 5px 95%;
 	}
 
 	h2 {
-		background: url( 'images/med-ltr.svg' ) no-repeat 5px 96%;
+		background: url( images/med-ltr.svg ) no-repeat 5px 96%;
 	}
 
 	h3 {
-		background: url( 'images/short-ltr.svg' ) no-repeat 7px 100%;
+		background: url( images/short-ltr.svg ) no-repeat 7px 100%;
 	}
 
 	h1,
@@ -325,15 +322,14 @@ a#p-banner {
 #firstHeading-container {
 	margin: 0 0 0 -25px;
 	padding: 0 0 0 25px;
-	background: url( 'images/longlong-ltr.svg' ) no-repeat 0 94%,
-		url( 'images/long-ltr.svg' ) no-repeat 5px 100%;
+	background: url( images/longlong-ltr.svg ) no-repeat 0 94%,
+		url( images/long-ltr.svg ) no-repeat 5px 100%;
 }
 
 .mw-editsection {
 	font-family: sans-serif;
 	font-variant: normal;
 }
-
 
 #p-namespaces,
 #p-namespaces div,
@@ -357,6 +353,7 @@ a#p-banner {
 #p-variants h3 {
 	padding-right: 2em;
 }
+
 #p-namespaces,
 #p-variants {
 	float: left;
@@ -389,6 +386,7 @@ pre {
 	margin: auto;
 	text-align: center;
 }
+
 #mw-navigation {
 	margin: 1em 0;
 }
